<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:cardBackgroundColor="@color/colorGreenLight"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/titleTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/positive_popup_title_default"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_player_s_names"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:layout_marginTop="30dp"
                    android:textSize="18sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="30dp"
                    android:gravity="center">
                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/player_1"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:textSize="18sp"/>

                    <EditText
                        android:id="@+id/etPlayer1Name"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:background="@drawable/roundstyle"
                        android:backgroundTint="@color/colorWhite"
                        android:hint="@string/enter_name"
                        android:inputType="text"
                        android:paddingStart="10dp"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="30dp"
                    android:gravity="center">
                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/player_2"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:textSize="18sp"/>

                    <EditText
                        android:id="@+id/etPlayer2Name"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:background="@drawable/roundstyle"
                        android:backgroundTint="@color/colorWhite"
                        android:contentDescription="@string/enter_name"
                        android:hint="@string/enter_name"
                        android:inputType="text"
                        android:paddingLeft="10dp"
                        android:textSize="15sp" />
                </LinearLayout>
                <Button
                    android:id="@+id/btnPlay"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:textSize="24sp"
                    android:fontFamily="sans-serif-medium"
                    android:background="@drawable/button_green_round"
                    android:text="@string/positive_btn_text"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>